--- a/exam03/answer2.html
+++ b/exam03/answer2.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Vue Registration Quiz</title>
+      <title>Vue Quiz 03</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div id="app">
       <header>
-        <h3>{{ message}}</h3>
+        <h3>parent component</h3>
       </header>
-      <todo-list></todo-list>
-      <todo-footer></todo-footer>
+      <child-component v-bind:propsdata="message"></child-component>
+      <sibling-component v-bind:propsdata="anotherMessage"></sibling-component>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.2/dist/vue.js"></script>
     <script src="app2.js"></script>
