--- a/exam04/index5.html
+++ b/exam04/index5.html
@@ -10,16 +10,15 @@
       <button v-on:click="getData">프레임워크 목록 가져오기</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.2/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.3.4"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>
       new Vue({
         el: '#app',
         methods: {
           getData: function() {
-            this.$http.get('https://raw.githubusercontent.com/joshua1988/doit-vuejs/master/data/demo.json')
+            axios.get('https://raw.githubusercontent.com/joshua1988/doit-vuejs/master/data/demo.json')
               .then(function(retVal) {
                 console.log(retVal);
-                console.log(JSON.parse(retVal.data));
               });
           }
         }
